# ocli

./: .gitlab-ci.yml  Cargo.toml  README.md  example.toml  rust-toolchain.toml  rustfmt.toml
.github/workflows/: release.yaml
src/: lib.rs  main.rs
src/ocli/: Cargo.toml
src/ocli/src/: lib.rs  main.rs
src/ocli/tests/: integration_tests.rs
src/pyocli/: Cargo.toml  pyproject.toml
src/pyocli/src/: lib.rs
