[package]
name = "ocli"
version = "0.1.0"
edition = "2024"

[lib]
name = "ocli"
path = "src/lib.rs"

[[bin]]
name = "ocli"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.99"
clap = { version = "4.5.46", features = ["derive"] }
dirs = "6.0.0"
open = "5.3.2"
openidconnect = { version = "4.0.1", features = ["reqwest-blocking"] }
regex = "1.11.2"
reqwest = { version = "0.12.23", features = ["blocking"] }
serde = { version = "1.0.219", features = ["derive"] }
shellexpand = "3.1.1"
tera = "1.20.0"
toml = "0.9.5"
url = "2.5.7"
